--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,10 +1,10 @@
-video {
+/* video {
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
-}
+} */
 
 .hero-container {
   background: url("../images/img-home.jpg") center center/cover no-repeat;
@@ -25,7 +25,7 @@ video {
 }
 
 .hero-container > p {
-  margin-top: 8px;
+  margin-top: 358px;
   color: #fff;
   font-size: 32px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
